src/objects/Prorate__c.object
<CustomObject>
    <fields>
        <fullName>AmountRatio__c</fullName>
        <inlineHelpText>商談商品を複数の期間と金額で按分する場合の金額を算出する元になる割合（パーセント）。</inlineHelpText>
        <label>金額割合</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>商品</label>
        <referenceTo>Product2__c</referenceTo>
        <relationshipLabel>按分</relationshipLabel>
        <relationshipName>Prorates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SplitEndMonth__c</fullName>
        <defaultValue>3</defaultValue>
        <inlineHelpText>按分終了日を算出する元になる月。
１～１２までの整数が入力必須。</inlineHelpText>
        <label>按分終了月</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SplitYears__c</fullName>
        <inlineHelpText>按分回数を算出する元になる年数。
整数必須。</inlineHelpText>
        <label>按分年数</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>按分</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product2__c</columns>
        <columns>AmountRatio__c</columns>
        <columns>SplitYears__c</columns>
        <columns>SplitEndMonth__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>按分-{0000}</displayFormat>
        <label>按分名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SplitEndMonthBetween1to12Required</fullName>
        <active>true</active>
        <errorConditionFormula>OR(

  SplitEndMonth__c  &lt; 1
,
  SplitEndMonth__c  &gt; 12

)</errorConditionFormula>
        <errorDisplayField>SplitEndMonth__c</errorDisplayField>
        <errorMessage>按分終了月は１～１２の数字を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SplitYears1yearorMoreRequired</fullName>
        <active>true</active>
        <errorConditionFormula>SplitYears__c  &lt; 1</errorConditionFormula>
        <errorDisplayField>SplitYears__c</errorDisplayField>
        <errorMessage>按分年数は１以上の整数を入力してください。</errorMessage>
    </validationRules>
</CustomObject>